@@ -8,7 +8,7 @@ dist = Params-ValidationCompiler
 ; Used by a test but not required at runtime
 prereqs_skip = Moose::Util::TypeConstraints
 prereqs_skip = Specio
-prereqs_skip = Sub::Name
+prereqs_skip = Sub::Util
 prereqs_skip = Types::Standard
 stopwords = params
 stopwords = slurpy
@@ -19,11 +19,11 @@ stopwords = validator
 [Prereqs / DevelopRequires]
 Moose      = 2.0000
 Specio     = 0.14
-Sub::Name  = 0
+Sub::Util  = 1.40
 Type::Tiny = 0
 
 [Prereqs / Recommends]
-Sub::Name = 0
+Sub::Util = 1.40
 
 [Prereqs / TestRequires]
 Type::Tiny = 0
