@@ -3,7 +3,7 @@ use warnings;
 
 use Test2::Bundle::Extended;
 use Test2::Plugin::NoWarnings;
-use Test::Without::Module qw( Sub::Name );
+use Test::Without::Module qw( Sub::Util );
 
 use Params::ValidationCompiler qw( validation_for );
 
@@ -17,8 +17,8 @@ use Params::ValidationCompiler qw( validation_for );
 
     like(
         $e,
-        qr/\QCannot name a generated validation subroutine. Please install Sub::Name./,
-        'passing name when Sub::Name is not installed fails',
+        qr/\QCannot name a generated validation subroutine. Please install Sub::Util./,
+        'passing name when Sub::Util is not installed fails',
     );
 }
 
